release-1.10
- bugfix for single fragment/read templates in AlignmentFilter
- use Picard 1.84

release-1.09
- allow cycle range by read to be specified on command line

release-1.08
- corrects compile errors which went undetected in 1.07

release-1.07
- adapted IlluminaFileReader to read either normal or gzip compressed files

release-1.06
- corrects errors in git tagging with 1.04 and 1.05

release-1.04
- new tool SplitBamByChromosomes
- Can split BAM output into "target" and "excluded" files based on chromosomes to which reads align. Chromosomes defined as entries in SQ list from BAM header.

release-1.03
 - read both tile list and range

release-1.02
 - remove dist for github
 - new tool BamAdapterFinder
 - add bcel jar file in lib

release-1.01
- add program information in AlignmentFilter metrics file

release-1.00
 - reorganise java class files with prefix uk.ac.sanger.npg in the package names.
 - rewrite ant build file, add version number in the jar files and generate command options for each tool with java doc.
 - remove version number dependency in tests.
 - Picard updated from 1.67 to 1.68.
 - AlignmentFilter: record reference SQ list in the metrics file.

release-0.04
 - BamMerger allows extra reads in unmapped bam file and an option to add them to merged bam file, and merge flag information as well.
 - read locs files if clocs file not available.
 - allow one of Basecall and Intensity config xml file missing, try to use runParameters and RunInfo xml as well.
 - new tools: BamIndexDecoder, SplitBamByReadGroup, AlignmentFilter, ChangeBamHeader, BamTagStripper and BamQualityQuantisation.

release-0.03
 - cope with old format of filter file - no empty four bytes and version number in the header.
 - try to find filter file from base call directory if not in base call lane directory.
 - use pos file if no clocs file found.
 - cope with config xml file when using bustard directory as base call directory.

release-0.02